Fix z-index of navbar

--- a/src/style/custom-navbar/custom-navbar.css
+++ b/src/style/custom-navbar/custom-navbar.css
@@ -148,8 +148,8 @@ li.nav-item[report-id='playpage_dynamic'] .i-frame,
     width: 100%;
     background-color: var(--navbar-background);
     color: var(--navbar-foreground);
-    /* z-index: 10001; */
-    z-index: 1999;
+    z-index: 10001;
+    /* z-index: 1999; */
     display: flex;
     justify-content: center;
 }
